more functions added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
       <div id="gameboard"></div>
-      <p>It is <span id="player">go.</span></p>
+      <p>It is <span id="player"></span>'s go</p>
       <p id="info-display"></p>
 
       <script src="pieces.js"></script>
