--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
       <title>Chess</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="styles/style.css">
     </head>
 
     <body>
@@ -11,8 +11,8 @@
       <p>It is <span id="player"></span>'s go</p>
       <p id="info-display"></p>
 
-      <script src="pieces.js"></script>
-      <script src="app.js"></script>
+      <script src="scripts/pieces.js"></script>
+      <script src="scripts/app.js"></script>
     </body>
 
   </html>
