--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <p>It is <span id="player"></span>'s go</p>
       <p id="info-display"></p>
 
-      <script src="js/pieces.js"></script>
-      <script src="js/app.js"></script>
+      <script src="js/pieces.js" defer></script>
+      <script src="js/app.js" defer></script>
     </body>
 
   </html>
