--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <head>
       <title>Chess</title>
       <link rel="stylesheet" href="css/style.css">
+
+      <script src="js/pieces.js" defer></script>
+      <script src="js/script.js" defer></script>
     </head>
 
     <body>
       <div id="gameboard"></div>
-      <p>It is <span id="player"></span>'s go</p>
+      <p>It is <span id="player"></span>'s turn</p>
       <p id="info-display"></p>
-
-      <script src="js/pieces.js"></script>
-      <script src="js/app.js"></script>
     </body>
 
   </html>
