--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Chess</title>
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="pieces.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="js/pieces.js" defer></script>
+    <script src="js/app.js" defer></script>
 </head>
 
 <body>
